<resources>
    <string name="app_name">PetFeeder</string>
    <string name="title_home">Home</string>
    <string name="title_schedules">Schedule</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>

    <string name="title_dialog_schedule">Schedule a Feeding</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="loading">Loading…</string>
    <string name="next">Next</string>
    <string name="try_again">Try again</string>

    <string name="schedule_add">Add a New Scheduled Feeding</string>

    <string name="feedings">Feedings</string>
    <string name="cups">Cups</string>
    <string name="time">Time</string>

    <string name="feedings_per_day">Feedings Per Day</string>
    <string name="cups_per_day">Cups Per Day</string>

    <string name="settings_header_feeders">Feeder Settings</string>
    <string name="setting_nickname">Nickname</string>
    <string name="setting_wifi_ssid">SSID</string>
    <string name="setting_wifi_password">Network Security Key</string>
    <string name="setting_masked_password">********</string>
    <string name="setting_edit_ssid">Edit SSID</string>
    <string name="setting_edit_password">Edit Network Security Key</string>
    <string name="setting_edit_name">Edit Name</string>
    <string name="setting_reset_factory">Reset to Factory Settings</string>
    <string name="setting_reset_warning">Warning! all settings will be erased!</string>
    <string name="settings_cloud_messaging_token">Cloud Messaging Token</string>
    <string name="settings_title_app">App Settings</string>
    <string name="settings_title_feeder">Feeder Settings</string>

    <string name="title_setup">Add a new Feeder</string>
    <string name="setup_cancel_message">Are you sure you want to cancel setup?  You will be able to use your new feeder until you successfully set it up.</string>
    <string name="setup_introduction_caption">Begin searching for and setting up a new feeder?</string>
    <string name="setup_scan_status_scanning">Scanning for nearby feeders…</string>
    <string name="setup_scan_status_found_multiple">Multiple feeders found…</string>
    <string name="setup_scan_status_no_feeders_found">No Feeders were found.</string>
    <string name="setup_scan_status_error">An error has occurred.</string>
    <string name="setup_scan_message_notice">Please make sure your feeder is plugged in and turned on.</string>
    <string name="setup_scan_message_found_multiple">Please select which one you wish to configure.</string>
    <string name="setup_scan_message_error">Please try again.</string>
    <string name="hours">Hours</string>
    <string name="minute">Minute</string>

</resources>
